# vd-games-project

./: Makefile  Mikefile  Mikefile.save  pyproject.toml
VD_games/engine/: game_engine.py
VD_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_prime.py  VD_progression.py
games_project/scripts/: game.py
